public/style.css
/* ... */
.container {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 1rem;
  padding-left: 1rem;
}

@media (min-width: 1124px) {
  .container {
    max-width: 1124px;
  }
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.top-32 {
  top: 8rem;
}

.right-0 {
  right: 0px;
}

.-bottom-24 {
  bottom: -6rem;
}

.-left-36 {
  left: -9rem;
}

.-right-36 {
  right: -9rem;
}

.z-10 {
  z-index: 10;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-4 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-14 {
  margin-top: 3.5rem;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mt-20 {
  margin-top: 5rem;
}

.mt-16 {
  margin-top: 4rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mt-12 {
  margin-top: 3rem;
}

.mb-8 {
  margin-bottom: 2rem;
}

.mt-8 {
  margin-top: 2rem;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-5\/6 {
  height: 83.333333%;
}

.h-80 {
  height: 20rem;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-2\/4 {
  width: 50%;
}

.max-w-screen-lg {
  max-width: 1024px;
}

.flex-1 {
  flex: 1 1 0%;
}

.cursor-pointer {
  cursor: pointer;
}

.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.flex-col {
  flex-direction: column;
}

.flex-col-reverse {
  flex-direction: column-reverse;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-center {
  align-items: center;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.gap-12 {
  gap: 3rem;
}

.gap-6 {
  gap: 1.5rem;
}

.gap-16 {
  gap: 4rem;
}

.gap-10 {
  gap: 2.5rem;
}

.gap-x-24 {
  -moz-column-gap: 6rem;
       column-gap: 6rem;
}

.self-center {
  align-self: center;
}

.overflow-hidden {
  overflow: hidden;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-l-full {
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.rounded-r-full {
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

.border-b {
  border-bottom-width: 1px;
}

.border-bookmark-white {
  --tw-border-opacity: 1;
  border-color: rgb(247 247 247 / var(--tw-border-opacity));
}

.bg-bookmark-red {
  --tw-bg-opacity: 1;
  background-color: rgb(250 89 89 / var(--tw-bg-opacity));
}

.bg-bookmark-purple {
  --tw-bg-opacity: 1;
  background-color: rgb(82 103 223 / var(--tw-bg-opacity));
}

.bg-bookmark-white {
  --tw-bg-opacity: 1;
  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
}

.bg-bookmark-blue {
  --tw-bg-opacity: 1;
  background-color: rgb(36 42 69 / var(--tw-bg-opacity));
}

.p-6 {
  padding: 1.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.px-7 {
  padding-left: 1.75rem;
  padding-right: 1.75rem;
}

.py-3 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.py-20 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.py-8 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.px-6 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.text-center {
  text-align: center;
}

.font-Poppins {
  font-family: Poppins, sans-serif;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.font-light {
  font-weight: 300;
}

.uppercase {
  text-transform: uppercase;
}

.text-bookmark-blue {
  --tw-text-opacity: 1;
  color: rgb(36 42 69 / var(--tw-text-opacity));
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-bookmark-grey {
  --tw-text-opacity: 1;
  color: rgb(145 148 162 / var(--tw-text-opacity));
}

.text-bookmark-purple {
  --tw-text-opacity: 1;
  color: rgb(82 103 223 / var(--tw-text-opacity));
}

.text-black {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.shadow-md {
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.transition {
  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}
/* ... */

